--- a/kubernetes/frontend/src/app/start/start.component.html
+++ b/kubernetes/frontend/src/app/start/start.component.html
@@ -6,6 +6,15 @@
       </option>
     </select>
   </div>
+
+  <div>
+    <label for="experimentId">Experiment ID:</label>
+    <input
+      type="text"
+      id="experimentId"
+      [(ngModel)]="experimentId"
+    />
+  </div>
   
   <div>
     <label for="numVehicles">Number of Vehicles:</label>
